--- a/client/package.json
+++ b/client/package.json
@@ -10,7 +10,9 @@
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.1",
     "prop-types": "15.7.2",
-    "socket.io-client": "^2.3.0"
+    "socket.io-client": "^2.3.0",
+    "react-simple-code-editor": "0.9.11",
+    "prismjs": "1.16.0"
   },
   "scripts": {
     "start": "react-scripts start",
