--- a/client/package.json
+++ b/client/package.json
@@ -6,13 +6,15 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "ace-builds": "^1.9.5",
+    "prismjs": "1.16.0",
+    "prop-types": "15.7.2",
     "react": "^16.13.1",
+    "react-ace": "^10.1.0",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.1",
-    "prop-types": "15.7.2",
-    "socket.io-client": "^2.3.0",
     "react-simple-code-editor": "0.9.11",
-    "prismjs": "1.16.0"
+    "socket.io-client": "^2.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
